<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <LinearLayout
           android:id="@+id/tableBg"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:paddingBottom="30dp"
           android:background="@color/black">

           <ImageView
               android:id="@+id/tableImage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:srcCompat="@drawable/ic_java_2"
               android:contentDescription="@string/app_name"/>

           <TextView
               android:id="@+id/tableTittle"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/white"
               android:fontFamily="sans-serif-black"
               android:textSize="20sp"
               android:layout_margin="10dp"
               android:text="@string/app_name" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:fontFamily="sans-serif"
                   android:textSize="14sp"
                   android:layout_margin="10dp"
                   android:text="@string/guests" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:fontFamily="sans-serif"
                   android:textSize="14sp"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="90dp"
                   android:text="@string/time" />

           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <TextView
                   android:id="@+id/tableGuests"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:fontFamily="sans-serif-black"
                   android:textSize="14sp"
                   android:layout_margin="10dp"
                   android:text="@string/app_name" />

               <TextView
                   android:id="@+id/tableTime"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:fontFamily="sans-serif-black"
                   android:textSize="14sp"
                   android:layout_marginTop="10dp"
                   android:layout_marginStart="100dp"
                   android:text="@string/app_name" />

           </LinearLayout>


       </LinearLayout>





    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>